<resources>
    <string name="app_name">HoroscopeApi</string>
    <string name="textview8">TextView8</string>
    <string name="textview3">TextView3</string>
    <string name="textview2">TextView2</string>
    <string name="textview1">TextView1</string>
    <string name="textview5">TextView5</string>
    <string name="textview6">TextView6</string>
    <string name="textview7">TextView7</string>
    <string name="textview4">TextView4</string>
</resources>